# Ultrasound_Test_Prototype

./: README.md
Altium/Ultrasound_Test_Prototype/: Constraints.xml  Ultrasound_Test_Prototype.PcbDoc  Ultrasound_Test_Prototype.PrjPcb  Ultrasound_Test_Prototype.PrjPcbStructure  Ultrasound_Test_Prototype.SchDoc  Ultrasound_Test_Prototype.html
Python/: ultrasound_test_prototype_com.py
ROS/mic_logger/: CMakeLists.txt  MicLogger.py  package.xml
ROS/mic_logger/launch/: mic_logger.launch
ROS/mic_logger/msg/: ADCPacketRaw.msg  UInt16ArrayStamped.msg
STM32CubeIDE/Ultrasound_Test_Prototype/: .cproject  .mxproject  .project  Ultrasound_Test_Prototype Debug.launch  Ultrasound_Test_Prototype.ioc
STM32CubeIDE/Ultrasound_Test_Prototype/Core/Inc/: main.h  stm32g0xx_it.h
STM32CubeIDE/Ultrasound_Test_Prototype/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
